# transpose

./: Cargo.toml  README.md
benches/: benchmark_transpose.rs  benchmark_transpose_inplace.rs  perf_ip  perf_oop
src/: ej.rs  lib.rs  outofplace.rs
