[package]
name = "transpose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
strength_reduce = "^0.2.1"
rayon = "1.5"

[dependencies.num-integer]
version = "0.1"
default-features = false

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark_transpose"
harness = false

#[[bench]]
#name = "benchmark_transpose_inplace"
#harness = false
